--- a/LittleRockProperties3.html
+++ b/LittleRockProperties3.html
@@ -128,6 +128,10 @@
                 <p>Click for details</p>
             </div>
             <!-- Property 2 -->
+              <div class="property" onclick="showOverlay('property2-info')">
+                <img src="PropertyPics/DowntownLittleRockBNB8Landing.webp" alt="Property 2">
+                <p>Click for details</p>
+            </div>
         </section>
         <div class="page-links">
             <a href="LittleRockProperties1.html">1</a>
