--- a/property8.html
+++ b/property8.html
@@ -152,11 +152,11 @@
         <div class="title">Enjoy a monthly furnished apartment at Downtown LR</div>
         <div class="image-slider">
             <div class="image-container">
-                <img src="PropertyPics/Ruthhouse7-1.webp" alt="Slide 1" class="slide-image">
-                <img src="PropertyPics/Ruthhouse7-2.webp" alt="Slide 2" class="slide-image">
-                <img src="PropertyPics/Ruthhouse7-3.webp" alt="Slide 3" class="slide-image">
-                <img src="PropertyPics/Ruthhouse7-4.webp" alt="Slide 4" class="slide-image">
-                <img src="PropertyPics/Ruthhouse7-5.webp" alt="Slide 5" class="slide-image">
+                <img src="PropertyPics/Ruthhouse8-1.webp" alt="Slide 1" class="slide-image">
+                <img src="PropertyPics/Ruthhouse8-2.webp" alt="Slide 2" class="slide-image">
+                <img src="PropertyPics/Ruthhouse8-3.webp" alt="Slide 3" class="slide-image">
+                <img src="PropertyPics/Ruthhouse8-4.webp" alt="Slide 4" class="slide-image">
+                <img src="PropertyPics/Ruthhouse8-5.webp" alt="Slide 5" class="slide-image">
             </div>
         </div>
         <div class="description">
@@ -179,8 +179,8 @@
                <h2>Booking</h2>
                 <p>Reserve your stay now!</p>
                  <div class="booking-buttons">
-                    <a href="https://www.airbnb.com/rooms/44568459?guests=1&adults=1&s=67&unique_share_id=d7ba4a94-4274-4c43-a214-bc3a64d1fd90&source_impression_id=p3_1712124510_7pds2gohQko4EKGk">AIRBNB</a>
-                    <a href="https://www.vrbo.com/2221943?rm1=a2&expediaPropertyId=65155789&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
+                    <a href="https://www.airbnb.com/slink/QLP00pXO">AIRBNB</a>
+                    <a href="https://www.vrbo.com/2261876">VRBO</a>
                 </div>
             </div>
         </div>
