--- a/property3.html
+++ b/property3.html
@@ -179,7 +179,7 @@
                 <p>Reserve your stay now!</p>
                 <div class="booking-buttons">
                     <a href="https://www.airbnb.com/rooms/29369048?guests=1&adults=1&s=67&unique_share_id=b2553544-4931-4fc8-ada2-576b46fff0e3&source_impression_id=p3_1710787835_tsJQneFoHfHp1FBb">AIRBNB</a>
-                    <a href="https://www.vrbo.com/1418910?rm1=a2&expediaPropertyId=31052285&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
+                    <a href="https://www.vrbo.com/1466189">VRBO</a>
                 </div>
             </div>
         </div>
