--- a/property6.html
+++ b/property6.html
@@ -180,7 +180,7 @@
                 <p>Reserve your stay now!</p>
                  <div class="booking-buttons">
                     <a href="https://www.airbnb.com/rooms/44593642?guests=1&adults=1&s=67&unique_share_id=e583b12a-c4bc-48f3-8d1a-90455355ba3e&source_impression_id=p3_1710787838_dGZ7wVADPAYzAr%2Fc">AIRBNB</a>
-                    <a href="https://www.vrbo.com/2221943?rm1=a2&expediaPropertyId=65155789&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
+                    <a href="www.vrbo.com/2040464">VRBO</a>
                 </div>
             </div>
         </div>
