--- a/property7.html
+++ b/property7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monthly furnished Apartment in Downtown LR!</title>
+    <title>Great Monthly Furnished Apartment</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -149,7 +149,7 @@
 </header>
 <div class="container">
     <section>
-        <div class="title">Enjoy a monthly furnished apartment at Downtown LR</div>
+        <div class="title">Great Monthly Furnished Apartment</div>
         <div class="image-slider">
             <div class="image-container">
                 <img src="PropertyPics/Ruthhouse7-1.webp" alt="Slide 1" class="slide-image">
@@ -179,7 +179,7 @@
                <h2>Booking</h2>
                 <p>Reserve your stay now!</p>
                  <div class="booking-buttons">
-                    <a href="https://www.airbnb.com/rooms/44568459?guests=1&adults=1&s=67&unique_share_id=d7ba4a94-4274-4c43-a214-bc3a64d1fd90&source_impression_id=p3_1712124510_7pds2gohQko4EKGk">AIRBNB</a>
+                    <a href="https://www.airbnb.com/rooms/48491343?viralityEntryPoint=1&unique_share_id=10F8F42E-459B-458A-B4C3-657A04024FCC&slcid=3c7044b6b29645a6aeb7e7d16380f23d&s=76&feature=share&adults=1&channel=native&slug=FH7Oh9ak">AIRBNB</a>
                     <a href="https://www.vrbo.com/2221943?rm1=a2&expediaPropertyId=65155789&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
                 </div>
             </div>
