--- a/property8.html
+++ b/property8.html
@@ -152,10 +152,10 @@
         <div class="title">Enjoy a monthly furnished apartment at Downtown LR</div>
         <div class="image-slider">
             <div class="image-container">
-                <img src="PropertyPics/Ruthhouse8-1.jpg" alt="Slide 1" class="slide-image">
-                <img src="PropertyPics/Ruthhouse8-2.jpg" alt="Slide 2" class="slide-image">
-                <img src="PropertyPics/Ruthhouse8-3.jpg" alt="Slide 3" class="slide-image">
-                <img src="PropertyPics/Ruthhouse8-4.jpg" alt="Slide 4" class="slide-image">
+                <img src="PropertyPics/Ruthhouse8-1.jpeg" alt="Slide 1" class="slide-image">
+                <img src="PropertyPics/Ruthhouse8-2.jpeg" alt="Slide 2" class="slide-image">
+                <img src="PropertyPics/Ruthhouse8-3.jpeg" alt="Slide 3" class="slide-image">
+                <img src="PropertyPics/Ruthhouse8-4.jpeg" alt="Slide 4" class="slide-image">
             </div>
         </div>
         <div class="description">
