--- a/property8.html
+++ b/property8.html
@@ -149,7 +149,7 @@
 </header>
 <div class="container">
     <section>
-        <div class="title">Enjoy a monthly furnished apartment at Downtown LR</div>
+        <div class="title">Comfort at Downtown Little Rock</div>
         <div class="image-slider">
             <div class="image-container">
                 <img src="PropertyPics/Ruthhouse8-1.jpeg" alt="Slide 1" class="slide-image">
